feat(bot) detect bot Ryowl

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4084,3 +4084,9 @@
     producer:
       name: Hatena Co., Ltd.
       url: https://www.hatena.ne.jp
+-
+  user_agent: Mozilla/5.0 (compatible; RyowlEngine/1.0; +https://ryowl.org)
+  bot:
+    name: Ryowl
+    category: Crawler
+    url: https://ryowl.org
