--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2329,6 +2329,11 @@
     name: 'Hatena Co., Ltd.'
     url: 'https://www.hatena.ne.jp'
 
+- regex: 'RyowlEngine/(\d+)'
+  name: 'Ryowl'
+  category: 'Crawler'
+  url: 'https://ryowl.org'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
