feat(device) detect new brand G-Touch models: Stella, Stella XS, Stella X, Stella Omega feat(device) detect brand Starlight model: Star Mix 2 feat(device) detect brand Zuum models: Stellar Pro, Stellar, Stellar Plus,  Stellar Mini, Stellar M1, Stellar P1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14669,6 +14669,16 @@ Q-Touch:
   device: 'smartphone'
   model: '$1'
 
+# G-Touch or GTouch
+G-Touch:
+  regex: 'GTouch[_ ]|(?:Stella (?:XS?|Omega))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Stella (XS?|Omega)'
+      model: 'Stella $1'
+    - regex: 'GTouch[_ ]STELLA'
+      model: 'Stella'
+
 # T-Mobile
 T-Mobile:
   regex: 'T-Mobile[ _][a-z0-9 ]+|REVVLRY|REVVL 2( PLUS)?(?:[);/ ]|$)'
@@ -17498,7 +17508,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1))?|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Akus Z'
@@ -17517,8 +17527,18 @@ Zuum:
       model: 'Onix S'
     - regex: 'STEDI'
       model: 'Stedi'
-    - regex: 'STELLAR Z'
-      model: 'Stellar Z'
+    - regex: 'STELLAR PRO'
+      model: 'Stellar Pro'
+    - regex: 'STELLAR PLUS'
+      model: 'Stellar Plus'
+    - regex: 'STELLAR ([MP]1|Z)'
+      model: 'Stellar $1'
+    - regex: 'STELLAR MINI'
+      model: 'Stellar Mini'
+    - regex: 'STELLAR MINI'
+      model: 'Stellar Mini'
+    - regex: 'STELLAR'
+      model: 'Stellar'
     - regex: 'GRAVITY Z'
       model: 'Gravity Z'
     - regex: 'AURA X'
@@ -19815,7 +19835,7 @@ Selenga:
 
 # Starlight
 Starlight:
-  regex: '(?:My_Star_X|RIO STAR|C_Note_Pro)(?:[);/ ]|$)'
+  regex: '(?:My_Star_X|RIO STAR|C_Note_Pro|Star_Mix_2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'My_Star_X'
@@ -19824,6 +19844,8 @@ Starlight:
       model: 'Rio Star'
     - regex: 'C_Note_Pro'
       model: 'C Note Pro'
+    - regex: 'Star_Mix_2'
+      model: 'Star Mix 2'
 
 # GEOFOX
 GEOFOX:
