feat(device) detect new brand Pendoo models: T95Z Plus, X92, Mini, X10 Plus, X8 Pro+, A5X Max, X99

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21157,3 +21157,19 @@ Gresso:
   models:
     - regex: 'Gresso[ _]Regal(?:[);/ ]|$)'
       model: 'Regal'
+
+# Pendoo  (pendoo.tv)
+Pendoo:
+  regex: 'Pendoo|A5X MAX(?:[\.-]\w+)?\.01\.d4'
+  device: 'tv'
+  models:
+    - regex: 'Pendoo ?(T95Z|X10) PLUS'
+      model: '$1 Plus'
+    - regex: 'Pendoo ?X8PRO+'
+      model: 'X8 Pro+'
+    - regex: 'Pendoo[ \.]?(X9[29])'
+      model: '$1'
+    - regex: 'pendoo mini'
+      model: 'Mini'
+    - regex: 'A5X MAX(?:[\.-]\w+)?\.01\.d4'
+      model: 'A5X Max'
