chore: add test Foobar2000 chore: remove WordPress rule is lib (defined early as a bot) chore: remove WWW-Mechanize rule is lib (dublicate)

--- a/Tests/fixtures/mediaplayer.yml
+++ b/Tests/fixtures/mediaplayer.yml
@@ -240,3 +240,16 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: foobar2000/1.6.1
+  os: [ ]
+  client:
+    type: mediaplayer
+    name: Foobar2000
+    version: 1.6.1
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
