--- a/regexes/client/mediaplayers.yml
+++ b/regexes/client/mediaplayers.yml
@@ -33,7 +33,7 @@
   name: 'FlyCast'
   version: '$1'
 
-- regex: 'foobar2000(?:/([\d\.]+))?'
+- regex: 'foobar2000/(?:([\d\.]+))?'
   name: 'Foobar2000'
   version: '$1'
 
