chore: add test Foobar2000 chore: remove WordPress rule is lib (defined early as a bot) chore: remove WWW-Mechanize rule is lib (dublicate) feat(mediaplayer): change type `fead reader` type to `mediaplayer` for app Downcast

--- a/regexes/client/mediaplayers.yml
+++ b/regexes/client/mediaplayers.yml
@@ -205,6 +205,7 @@
   name: 'Viva Brittania Android App'
   version: '$1'
 
+# Downcast (www.downcastapp.com | https://apps.apple.com/us/app/downcast/id393858566)
 - regex: 'Downcast(?:/([\d\.]+))?'
   name: 'Downcast'
   version: '$1'
