--- a/Tests/fixtures/mediaplayer.yml
+++ b/Tests/fixtures/mediaplayer.yml
@@ -253,3 +253,35 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: Downcast/2.9.11 (iPad; iOS 9.2.1; Scale/2.00)
+  os:
+    name: iOS
+    version: 9.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Downcast
+    version: 2.9.11
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Downcast/2.9.11 (Mac OS X Version 10.11.3 (Build 15D21))
+    os:
+      name: Mac
+      version: "10.11.3"
+      platform: ""
+    client:
+      type: mediaplayer
+      name: Downcast
+      version: "2.9.11"
+    device:
+      type: desktop
+      brand: Apple
+      model: ""
+    os_family: Mac
+    browser_family: Unknown
