chore: remove Music Player Daemon chore: remove AntennaPod chore: remove BashPodder

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -90,6 +90,11 @@
   name: 'YouTube'
   version: '$1'
 
+# Downcast (www.downcastapp.com | https://apps.apple.com/us/app/downcast/id393858566)
+- regex: 'Downcast(?:/([\d\.]+))?'
+  name: 'Downcast'
+  version: '$1'
+
 # AFNetworking generic
 - regex: '([^/]+)/(\d+(?:\.\d+)+) \((?:iPhone|iPad); iOS [0-9\.]+; Scale/[0-9\.]+\)'
   name: '$1'
