set Downcast set correct client type

--- a/regexes/client/mediaplayers.yml
+++ b/regexes/client/mediaplayers.yml
@@ -33,7 +33,7 @@
   name: 'FlyCast'
   version: '$1'
 
-- regex: 'foobar2000/(?:([\d\.]+))?'
+- regex: 'foobar2000(?:/([\d\.]+))?'
   name: 'Foobar2000'
   version: '$1'
 
@@ -129,6 +129,10 @@
   name: 'MPlayer'
   version: '$1'
 
+- regex: 'Music Player Daemon ([\d\.]+)'
+  name: 'mpd'
+  version: '$1'
+
 - regex: 'NSPlayer(?:/([\d\w_\.]+))?.*'
   name: 'Windows Media Player'
   version: '$1'
@@ -136,6 +140,14 @@
 - regex: 'xine(?:/([\d\w_\.]+))?'
   name: 'xine'
   version: '$1'
+
+- regex: 'AntennaPod(?:/([\d\.]+))?'
+  name: 'AntennaPod'
+  version: '$1'
+
+- regex: 'BashPodder'
+  name: 'BashPodder'
+  version: ''
 
 - regex: 'BredowcastAndroid(?:/([\d\.]+))?'
   name: 'Bredowcast Android App'
@@ -191,4 +203,8 @@
 
 - regex: 'VivaBritanniaAndroid(?:/([\d\.]+))?'
   name: 'Viva Brittania Android App'
+  version: '$1'
+
+- regex: 'Downcast/(\d+\.[\d\.]+)?'
+  name: 'Downcast'
   version: '$1'
