--- a/Tests/fixtures/mediaplayer.yml
+++ b/Tests/fixtures/mediaplayer.yml
@@ -253,4 +253,35 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
-
+-
+  user_agent: Downcast/2.9.11 (Mac OS X Version 10.11.3 (Build 15D21))
+  os:
+    name: Mac
+    version: "10.11.3"
+    platform: ""
+  client:
+    type: mediaplayer
+    name: Downcast
+    version: "2.9.11"
+  device:
+    type: desktop
+    brand: Apple
+    model: ""
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: 'Downcast/1241 CFNetwork/673.4 Darwin/13.3.0 (x86_64) (MacBookAir4%2C2)'
+  os:
+    name: Mac
+    version: 10.9.4
+    platform: x64
+  client:
+    type: mediaplayer
+    name: Downcast
+    version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2011)
+  os_family: Mac
+  browser_family: Unknown
