feat(test) add test Aria2

--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -221,3 +221,9 @@
     type: library
     name: uTorrent
     version: ""
+
+- user_agent: aria2/1.33.1
+  client:
+    type: library
+    name: Aria2
+    version: 1.33.1
