feat(test) add test Sony Media Go

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -139,9 +139,9 @@
 - regex: 'Player FM'
   name: 'Player FM'
   version: ''
-- regex: 'Podkicker(?: Pro)?/([\d\.]+)'
-  name: 'Podkicker'
-  version: '$1'
+- regex: 'Podkicker( (?:Pro|Classic))?/([\d\.]+)'
+  name: 'Podkicker$1'
+  version: '$2'
 - regex: 'PodcastRepublic/([\d\.]+)'
   name: 'Podcast Republic'
   version: '$1'
