--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -99,7 +99,7 @@
   user_agent: Podkicker Pro/1.9.4
   client:
     type: mobile app
-    name: Podkicker
+    name: Podkicker Pro
     version: "1.9.4"
 -
   user_agent: Castro/64 CFNetwork/672.1.15 Darwin/14.0.0
@@ -497,3 +497,9 @@
     type: mobile app
     name: CGN
     version: 1.3.93.10
+-
+  user_agent: Podkicker Classic/1.2.9
+  client:
+    type: mobile app
+    name: Podkicker Classic
+    version: 1.2.9
