--- a/Tests/fixtures/mediaplayer.yml
+++ b/Tests/fixtures/mediaplayer.yml
@@ -285,3 +285,19 @@
     model: MacBook Air 13" (2011)
   os_family: Mac
   browser_family: Unknown
+-
+  user_agent: MediaGo/3.2.0.191 (Windows NT 10.0; WOW64) PlaybackEngine/2.20.103.05220
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mediaplayer
+    name: Sony Media Go
+    version: 3.2.0.191
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
