feat(test) add test gvfs

--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -227,3 +227,9 @@
     type: library
     name: Aria2
     version: 1.33.1
+
+- user_agent: gvfs/1.34.1
+  client:
+    type: library
+    name: gvfs
+    version: 1.34.1
