--- a/Tests/Parser/Client/fixtures/mediaplayer.yml
+++ b/Tests/Parser/Client/fixtures/mediaplayer.yml
@@ -179,3 +179,15 @@
     type: mediaplayer
     name: SONOS
     version: 61.1
+-
+  user_agent: HTC Streaming Player htc / 1.0 / o2_de / 4.2.2
+  client:
+    type: mediaplayer
+    name: HTC Streaming Player
+    version: ""
+-
+  user_agent: MPlayer 1.1-4.6
+  client:
+    type: mediaplayer
+    name: MPlayer
+    version: "1.1"
