--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -135,7 +135,6 @@
   name: 'uTorrent'
   version: ''
 
-- regex: 'gvfs(?:/(\d+[\.\d]+))?'
+- regex: 'gvfs/(?:(\d+[\.\d]+))?'
   name: 'gvfs'
   version: '$1'
-
