feat(test) add test Downcast iTunes

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -503,3 +503,9 @@
     type: mobile app
     name: Podkicker Classic
     version: 1.2.9
+-
+  user_agent: iTunes/10.7 Downcast/2.8.24.1002
+  client:
+    type: mobile app
+    name: Downcast
+    version: 2.8.24.1002
