feat(device) detect new brand Genesis models: SK-Mtek GT7301, SK-Mtek GT7305

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21197,3 +21197,9 @@ Engel:
   regex: '(EN1007Q)plus(?:[);/ ]|$)'
   device: 'tv'
   model: '$1 Plus'
+
+# Genesis
+Genesis:
+  regex: '(SK-Mtek GT730[15])(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
