--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3437,3 +3437,39 @@
     model: T9
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.1; SK-Mtek GT7301 Build/JOP40D)
+  os:
+    name: Android
+    version: 4.2.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Genesis
+    model: SK-Mtek GT7301
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.1; SK-Mtek GT7305 Build/JOP40D)
+  os:
+    name: Android
+    version: 4.2.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Genesis
+    model: SK-Mtek GT7305
+  os_family: Android
+  browser_family: Android Browser
