feat(device) detect new brand InfoKit model: TVB-906X feat(device) detect brand Beelink model: GS1 feat(device) detect brand Meizu models: MX5, M5 Note feat(device) detect brand Xiaomi models: Redmi 3S, Hongmi 2 4G feat(device) detect brand NOA model: H4SE feat(device) detect brand HTC model: Desire 816 feat(device) detect brand Azumi Mobile model: A40C feat(device) detect brand Motorola model: Moto C Plus feat(device) detect brand iRulu model: AL101 feat(device) detect brand Multilaser models: ML21-M7s Quad Core, ML01-M7s Quad Core, ML01-M7 SD, ML12-M7s Quad Core

--- a/Tests/fixtures/smartphone-21.yml
+++ b/Tests/fixtures/smartphone-21.yml
@@ -9013,3 +9013,131 @@
     model: Star Mix 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: WhatsApp/2.18.79 Android/5.1 Device/Meizu-MX5
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.18.79
+  device:
+    type: smartphone
+    brand: Meizu
+    model: MX5
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.18.46 Android/6.0.1 Device/Xiaomi-Redmi_3S
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.18.46
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Redmi 3S
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.18.65 Android/6.0 Device/NOA-NOA_H4se
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.18.65
+  device:
+    type: smartphone
+    brand: NOA
+    model: H4SE
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.17.427 Android/6.0 Device/HTC-HTC_Desire_816
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.17.427
+  device:
+    type: smartphone
+    brand: HTC
+    model: Desire 816
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.17.395 Android/6.0 Device/Meizu-M5_Note
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.17.395
+  device:
+    type: phablet
+    brand: Meizu
+    model: M5 Note
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.17.427 Android/4.4.2 Device/azumi-A40C
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.17.427
+  device:
+    type: smartphone
+    brand: Azumi Mobile
+    model: A40C
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.17.427 Android/4.4.4 Device/Xiaomi-2014811
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.17.427
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Hongmi 2 4G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: WhatsApp/2.17.427 Android/7.0 Device/motorola-Moto_C_Plus
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: WhatsApp
+    version: 2.17.427
+  device:
+    type: smartphone
+    brand: Motorola
+    model: Moto C Plus
+  os_family: Android
+  browser_family: Unknown
