--- a/Tests/fixtures/smartphone-21.yml
+++ b/Tests/fixtures/smartphone-21.yml
@@ -9141,3 +9141,57 @@
     model: Moto C Plus
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 7.1.2; ru; MI_5X) U2/1.0.0 UCBrowser/11.1.0.1041 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 11.1.0.1041
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: MI 5X
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; Hot_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 84.0.4147.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Hotwav
+    model: Hot 6
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; HOT 6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Hotwav
+    model: Hot 6
+  os_family: Android
+  browser_family: Chrome
