--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3490,7 +3490,7 @@
     brand: iRulu
     model: AL101
   os_family: Android
-  browser_family: Android Browse
+  browser_family: Android Browser
 -
   user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; ML21-M7s QuadCore Build/ML21-M7SQC.SDK2.1.V3)
   os:
