feat(device) detect new brand Huskee model: Vulkano

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21229,3 +21229,9 @@ Blloc:
   regex: '(Zero18)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# Huskee
+Huskee:
+  regex: 'VULKANO(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Vulkano'
