--- a/Tests/fixtures/smartphone-21.yml
+++ b/Tests/fixtures/smartphone-21.yml
@@ -9267,3 +9267,21 @@
     model: Zero18
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; VULKANO) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.149 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.149
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huskee
+    model: Vulkano
+  os_family: Android
+  browser_family: Chrome
