--- a/Tests/fixtures/smartphone-21.yml
+++ b/Tests/fixtures/smartphone-21.yml
@@ -9285,3 +9285,21 @@
     model: Vulkano
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; PLUME P6 PRO LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.89 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Condor
+    model: Plume P6 Pro LTE
+  os_family: Android
+  browser_family: Chrome
