feat(device) detect brand Philco model: PTB7PA

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18854,7 +18854,7 @@ Maxtron:
 
 # Philco (philco.com.br)
 Philco:
-  regex: 'PHILCO |(PCS01|PH350B|PTB7R)(?:[);/ ]|$)'
+  regex: 'PHILCO |(PCS01|PH350B|PTB7R|PTB7PAP_PTB7PAB_PTB7PAR)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(PCS01|PH350B)(?:[);/ ]|$)'
@@ -18862,6 +18862,9 @@ Philco:
     - regex: '(PTB7R)(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
+    - regex: 'PTB7PAP_PTB7PAB_PTB7PAR(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'PTB7PA'
     - regex: 'PHILCO Android TV(?:[);/ ]|$)'
       device: 'tv'
       model: 'General Android TV'
