--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3617,3 +3617,21 @@
     model: PLT1074G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; PTB7PAP_PTB7PAB_PTB7PAR) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Philco
+    model: PTB7PA
+  os_family: Android
+  browser_family: Chrome
