--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3635,3 +3635,21 @@
     model: PTB7PA
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Q27 4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: iBall
+    model: Q27 4G
+  os_family: Android
+  browser_family: Chrome
