feat(device) detect new brand OINOM models: V9, V7H, V7, V9D, V6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21290,3 +21290,9 @@ SOLO:
   regex: 'SOLO[_ ](Aspire(?: M)?)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# OINOM
+OINOM:
+  regex: 'OINOM[_ ](V9D|V7H|V[679])(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
