feat(device) detect brand MSI models: Primo 93, Primo 81

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10290,16 +10290,14 @@ Mobiistar:
     - regex: 'Mobiistar[ _]([^;/]+) Build'
       model: '$1'
 
-# MSI
+# MSI (msi.com)
 MSI:
-  regex: 'Primo ?(?:91|76)|Enjoy 7 Plus'
+  regex: 'Primo ?(?:9[13]|81|76)|Enjoy 7 Plus'
   device: 'tablet'
   models:
     # explicit tablet models
-    - regex: 'Primo ?76'
-      model: 'Primo 76'
-    - regex: 'Primo ?91'
-      model: 'Primo 91'
+    - regex: 'Primo ?(9[13]|76|81)'
+      model: 'Primo $1'
     - regex: 'Enjoy 7 Plus'
       model: 'Enjoy 7 Plus'
 
