feat(device) detect new brand OASYS model: TEG9300 feat(device) detect new brand TEENO models: S9, A1, S11 feat(device) detect new brand v-mobile models: J7, XS Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21350,3 +21350,27 @@ Sunny:
   regex: '(SS4G9 Mira|SS4G7 Sole|SS4G1 Luna|SS4G8 Nora|SS4G6 Lola)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# TEENO sub brand GOWN(HK)
+TEENO:
+  regex: 'TEENO'
+  device: 'smartphone'
+  models:
+    - regex: 'TEENO[_ ](S9|A1|S11)(?:[);/ ]|$)'
+      model: '$1'
+
+# v-mobile or Vmobile - sub brand GOWN(HK)
+v-mobile:
+  regex: 'Vmobile[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'Vmobile[ _](J7)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Vmobile XS Pro(?:[);/ ]|$)'
+      model: 'XS Pro'
+
+# OASYS (oasys.co)
+OASYS:
+  regex: '(TEG9300)(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: '$1'
