feat(device) detect new brand INCAR model: KZCAR (AHR-7280)
issue #5827

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21019,3 +21019,9 @@ Philips:
       model: 'Fisio $1'
     - regex: 'Philips[ _-]?([a-z0-9\-@]+)'
       model: '$1'
+
+# INCAR
+INCAR:
+  regex: '(KZCAR)(?:[);/ ]|$)'
+  device: 'car browser'
+  model: '$1'
