--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18858,7 +18858,7 @@ Philco:
       model: '$1'
     - regex: 'PHILCO Android TV(?:[);/ ]|$)'
       device: 'tv'
-      model: 'General Android TV'
+      model: ''
 
 # SEMP TCL
 SEMP TCL:
