--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9962,6 +9962,6 @@
   device:
     type: tv
     brand: Philco
-    model: General Android TV
+    model: ""
   os_family: Android
   browser_family: Android Browser
